# padel-slack-reminder

./: .gitignore  Cargo.toml  Containerfile  setup-azure
.github/workflows/: padel-slack-bot-AutoDeployTrigger-78c042aa-e321-42ec-a735-8fddb7575efd.yml  run.yml  test_and_deploy.yml
src/: main.rs
