[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
anyhow = "1.0"
slack-hook = "0.8.0"

[target.x86_64-unknown-linux-musl.dependencies.openssl-sys]
version = "0.9"
features = ["vendored"] 
